src/k8s/apps/sgf.dev/base/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sgf-dev-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
