src/k8s/apps/sgf.dev/base/image-prepuller.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: sgf-dev-image-prepuller
  labels:
    app.kubernetes.io/name: sgf-dev-image-prepuller
    app.kubernetes.io/part-of: sgf-dev
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sgf-dev-image-prepuller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sgf-dev-image-prepuller
        app.kubernetes.io/part-of: sgf-dev
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 1
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: pause
          image: registry.k8s.io/pause:3.10.1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          resources:
            requests:
              cpu: 1m
              memory: 1Mi
            limits:
              cpu: 5m
              memory: 8Mi
