src/k8s/apps/sgf.dev/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sgf-dev
  labels:
    app.kubernetes.io/name: sgf-dev
spec:
  selector:
    app.kubernetes.io/name: sgf-dev
  ports:
    - name: http
      port: 80
      targetPort: http
